# whatsapp-rust-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  build-all.ps1  package.json  tsconfig.json
docs/: api-reference.md  architecture.md  building.md  usage-c.md  usage-java.md  usage-typescript.md
internal/wacore/: Cargo.toml
internal/wacore/appstate/: Cargo.toml
internal/wacore/binary/: Cargo.toml
internal/wacore/derive/: Cargo.toml
internal/wacore/libsignal/: Cargo.toml
internal/wacore/noise/: Cargo.toml
internal/wacore/src/: proto_helpers.rs
internal/waproto/: Cargo.toml  build.rs
internal/waproto/src/: lib.rs  tags.rs  whatsapp.proto  whatsapp.rs
native/: Cargo.toml  README.md  build.ps1  cbindgen.toml  test_bridge.c
native/.cargo/: config.toml
native/include/: whatsapp_bridge.h
native/java/com/whatsapp/bridge/: Binary.java  Crypto.java  Curve.java  KeyHelper.java  NativeLoader.java  Voip.java
native/src/: lib.rs
native/src/ffi/: binary.rs  crypto.rs  curve.rs  key_helper.rs  mod.rs  voip.rs
native/src/jni_bridge/: binary.rs  crypto.rs  curve.rs  key_helper.rs  mod.rs  voip.rs
native/tests/: integration.rs
pkg/: whatsapp_rust_bridge.d.ts  whatsapp_rust_bridge.js  whatsapp_rust_bridge_bg.wasm  whatsapp_rust_bridge_bg.wasm.d.ts
src/: appstate.rs  binary.rs  crypto.rs  curve.rs  group_cipher.rs  jid.rs  key_helper.rs  lib.rs  noise_session.rs  session_builder.rs  session_cipher.rs  storage_adapter.rs  voip.rs
test/: handshake-parity.test.ts  parity.test.ts  server-response-parity.test.ts  simultaneous_session.test.ts
ts/: index.ts  macro.ts
