[workspace]
members = [
    ".",
    "native",
    "internal/wacore/appstate",
    "internal/wacore/binary",
    "internal/wacore/derive",
    "internal/wacore/libsignal",
    "internal/wacore/noise",
    "internal/waproto",
]
resolver = "2"

[workspace.dependencies]
aes = "0.9.0"
aes-gcm = { version = "0.11.0-rc.3", default-features = false, features = ["aes", "alloc", "bytes"] }
anyhow = { version = "1.0", default-features = false }
async-lock = { version = "3", default-features = false }
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.22", default-features = false }
bytes = { version = "1.5", default-features = false }
chrono = { version = "0.4", default-features = false }
compact_str = { version = "0.9", default-features = false }
ctr = { version = "0.10", default-features = false }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
futures = { version = "0.3", default-features = false, features = ["alloc", "async-await"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hkdf = { version = "0.13.0", default-features = false }
hmac = { version = "0.13.0", default-features = false }
iai-callgrind = "0.16"
itoa = "1"
log = "0.4"
prost = { version = "0.14.3", default-features = false, features = ["std"] }
prost-build = { version = "0.14.3", default-features = false }
rand = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-big-array = "0.5"
serde_json = { version = "1.0", default-features = false }
sha1 = { version = "0.11.0", default-features = false }
sha2 = { version = "0.11.0", default-features = false }
subtle = { version = "2.6", default-features = false }
thiserror = "2.0.17"
uuid = { version = "1", default-features = false }
yoke = { version = "0.8", features = ["derive"] }

wacore-appstate  = { path = "internal/wacore/appstate",  default-features = false, version = "0.6.0" }
wacore-binary    = { path = "internal/wacore/binary",    default-features = false, version = "0.6.0" }
wacore-derive    = { path = "internal/wacore/derive",    version = "0.6.0" }
wacore-libsignal = { path = "internal/wacore/libsignal", version = "0.6.0" }
wacore-noise     = { path = "internal/wacore/noise",     version = "0.6.0" }
waproto          = { path = "internal/waproto",          version = "0.6.0" }

[package]
name = "whatsapp-rust-bridge"
version = "1.0.0"
edition = "2024"
description = "High-performance WhatsApp utilities (crypto, binary protocol, Signal, Noise) compiled to WebAssembly for use in Node.js and browsers."
authors = ["Baron"]
license = "MIT"
repository = "https://github.com/7ucg/whatsapp-rust-bridge"
keywords = ["whatsapp", "wasm", "signal", "crypto", "binary"]
categories = ["cryptography", "wasm", "encoding"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
audio = ["dep:symphonia"]
image = ["dep:image"]
sticker = ["dep:img-parts"]

[dependencies]
async-lock = { version = "3", default-features = false }
async-trait = "0.1.89"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
  "alloc",
  "digest",
  "precomputed-tables",
] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
aes = "0.9"
aes-gcm = { version = "0.11.0-rc.3", default-features = false, features = ["aes", "alloc"] }
cbc = { version = "0.2", features = ["alloc"] }
ctr = { version = "0.10", default-features = false }
hkdf = { version = "0.13", default-features = false }
hmac = { version = "0.13", default-features = false }
image = { version = "0.25.5", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
], optional = true }
img-parts = { version = "0.4", default-features = false, optional = true }
js-sys = "0.3"
log = "0.4"
md-5 = "0.10"
prost = { version = "0.14.1", default-features = false }
rand = { version = "0.10", features = ["thread_rng"] }
rand_core = { version = "0.9", features = ["os_rng"] }
compact_str = { version = "0.9", default-features = false }
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "alloc",
] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.11", default-features = false }
simd-adler32 = { version = "0.3.7", default-features = false, features = [
  "std",
] }
symphonia = { version = "0.5.4", default-features = false, features = [
  "mp3",
  "aac",
  "isomp4",
  "ogg",
], optional = true }
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
uuid = { version = "1.18.1", default-features = false, features = ["v4", "js"] }

wacore-appstate  = { path = "internal/wacore/appstate" }
wacore-binary    = { path = "internal/wacore/binary", features = ["serde"] }
wacore-libsignal = { path = "internal/wacore/libsignal" }
wacore-noise     = { path = "internal/wacore/noise" }
waproto          = { path = "internal/waproto" }

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3", features = [
  "ReadableStream",
  "ReadableStreamDefaultReader",
] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
