[package]
name = "whatsapp-native-bridge"
version = "0.1.0"
edition = "2024"
description = "Native C / Java (JNI) bridge for whatsapp-rust-bridge — exposes the same crypto, Curve25519, binary-protocol, and key-helper functions via a stable C ABI and JNI."
authors = ["Baron"]
license = "MIT"
repository = "https://github.com/7ucg/whatsapp-rust-bridge"
keywords = ["whatsapp", "jni", "ffi", "crypto", "signal"]
categories = ["cryptography", "external-ffi-bindings"]

[lib]
name = "whatsapp_bridge"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
jni = ["dep:jni"]

[dependencies]
# crypto deps — no wasm-bindgen, native only
aes = "0.8"
aes-gcm = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
ctr = "0.9"
hkdf = "0.12"
hmac = "0.12"
md-5 = "0.10"
sha2 = "0.10"
rand = { version = "0.10", default-features = false, features = ["std", "std_rng", "sys_rng"] }
rand_core = { version = "0.9", features = ["os_rng"] }
curve25519-dalek = { version = "4.1.3", default-features = false, features = [
  "alloc",
  "digest",
  "precomputed-tables",
] }
getrandom = "0.3.4"

wacore-libsignal = { git = "https://github.com/jlucaso1/whatsapp-rust.git", branch = "main", package = "wacore-libsignal" }
wacore-binary = { git = "https://github.com/jlucaso1/whatsapp-rust.git", branch = "main", features = ["serde"] }
wacore-appstate = { git = "https://github.com/jlucaso1/whatsapp-rust.git", branch = "main", package = "wacore-appstate" }

base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
compact_str = "0.9"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

jni = { version = "0.21", optional = true }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
