[package]
name = "waproto"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Protocol Buffers definitions for WhatsApp"

[features]
default = []
generate = ["dep:prost-build", "dep:protoc-bin-vendored"]
serde-deserialize = []
serde-snake-case = ["serde-deserialize"]

[dependencies]
prost = { version = "0.14.3", default-features = false, features = ["std", "derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }

[build-dependencies]
prost-build         = { version = "0.14.3", default-features = false, optional = true }
protoc-bin-vendored = { version = "3", optional = true }
