[package]
name = "waproto"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Protocol Buffers definitions for WhatsApp"

[features]
default = []
generate = ["dep:prost-build", "dep:protoc-bin-vendored", "dep:prost-types", "dep:heck"]
serde-deserialize = []
serde-snake-case = ["serde-deserialize"]

[dependencies]
prost = { version = "0.14.3", default-features = false, features = ["std", "derive"] }
serde = { version = "1.0", features = ["derive", "rc"] }

[build-dependencies]
prost               = { version = "0.14.3", default-features = false, features = ["std"] }
prost-build         = { version = "0.14.3", default-features = false, optional = true }
prost-types         = { version = "0.14.3", default-features = false, features = ["std"], optional = true }
protoc-bin-vendored = { version = "3", optional = true }
heck                = { version = "0.5", optional = true }
