[package]
name = "wacore-libsignal"
version = "0.6.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/jlucaso1/whatsapp-rust"
description = "Signal Protocol implementation for the WhatsApp platform"

[dependencies]
aes              = "0.9.0"
arrayref         = "0.3.9"
async-lock       = { version = "3", default-features = false }
async-trait      = "0.1.89"
bytes            = { version = "1.5", default-features = false }
cbc              = { version = "0.2", features = ["alloc"] }
chrono           = { version = "0.4", default-features = false, features = ["now"] }
ctr              = { version = "0.10", default-features = false }
curve25519-dalek = "4.1.3"
derive_more      = { version = "2.1.0", features = ["from", "into", "try_from"] }
displaydoc       = "0.2.5"
ghash            = "0.6.0"
hex              = { version = "0.4", default-features = false, features = ["alloc"] }
hkdf             = { version = "0.13.0", default-features = false }
hmac             = { version = "0.13.0", default-features = false }
log              = "0.4"
prost            = { version = "0.14.3", default-features = false, features = ["std"] }
rand             = { version = "0.10", features = ["thread_rng"] }
serde            = { version = "1.0", features = ["derive", "rc"] }
sha1             = { version = "0.11.0", default-features = false }
sha2             = { version = "0.11.0", default-features = false }
subtle           = { version = "2.6", default-features = false }
thiserror        = "2.0.17"
uuid             = { version = "1", default-features = false }
waproto          = { path = "../../waproto" }
x25519-dalek     = { version = "2.0.1", features = ["static_secrets"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
futures          = { version = "0.3", default-features = false, features = ["alloc", "async-await", "executor"] }
iai-callgrind    = "0.16"
